[package]
name = "biedbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
percent-encoding = "2.1"
lazy_static = "1.4"
cookie = "0.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

teloxide = { version = "0.10", features = ["macros", "auto-send"] }
sled = "0.34"
bincode = "1.3"
chrono = "0.4"
futures = "0.3"
